--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,9 +12,12 @@ dependencies:
   appwrite: ^0.4.0
   cupertino_icons: ^1.0.2
   flutter_riverpod: ^0.13.1+1
+  flutter_svg: ^0.19.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 flutter:
   uses-material-design: true
+  assets:
+    - assets/
